--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Intellij workspace file
-.idea/workspace.xml
+# Intellij workspace files
+.idea/
 
 #Intellij compiled files
 out/
